--- a/Sunrise.csproj
+++ b/Sunrise.csproj
@@ -18,6 +18,48 @@
       <Reference Remove="Creatures-Objects\**" />
     </ItemGroup>
     
+    <ItemGroup>
+      <Reference Include="Assembly-CSharp-firstpass">
+        <HintPath>lib\Assembly-CSharp-firstpass.dll</HintPath>
+      </Reference>
+      <Reference Include="BepInEx">
+        <HintPath>lib\BepInEx.dll</HintPath>
+      </Reference>
+      <Reference Include="Fisobs">
+        <HintPath>lib\Fisobs.dll</HintPath>
+      </Reference>
+      <Reference Include="HOOKS-Assembly-CSharp">
+        <HintPath>lib\HOOKS-Assembly-CSharp.dll</HintPath>
+      </Reference>
+      <Reference Include="Mono.Cecil">
+        <HintPath>lib\Mono.Cecil.dll</HintPath>
+      </Reference>
+      <Reference Include="Mono.Cecil.Rocks">
+        <HintPath>lib\Mono.Cecil.Rocks.dll</HintPath>
+      </Reference>
+      <Reference Include="MonoMod">
+        <HintPath>lib\MonoMod.dll</HintPath>
+      </Reference>
+      <Reference Include="MonoMod.RuntimeDetour">
+        <HintPath>lib\MonoMod.RuntimeDetour.dll</HintPath>
+      </Reference>
+      <Reference Include="MonoMod.Utils">
+        <HintPath>lib\MonoMod.Utils.dll</HintPath>
+      </Reference>
+      <Reference Include="Assembly-CSharp">
+        <HintPath>lib\PUBLIC-Assembly-CSharp.dll</HintPath>
+      </Reference>
+      <Reference Include="SlugBase">
+        <HintPath>lib\SlugBase.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine">
+        <HintPath>lib\UnityEngine.dll</HintPath>
+      </Reference>
+      <Reference Include="UnityEngine.CoreModule">
+        <HintPath>lib\UnityEngine.CoreModule.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+    
     <Target Name="GenerateMod" AfterTargets="PostBuildEvent">
 		<ItemGroup>
 			<RemovePlugins Include="../mod/plugins/*.dll" />
